<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept_challenge">ACCEPT CHALLENGE</string>
    <string name="achievement_fitness_jedi">CgkIpNK01csfEAIQDQ</string>
    <string name="achievement_fitness_padawan">CgkIpNK01csfEAIQDA</string>
    <string name="achievement_hard_worker">CgkIpNK01csfEAIQDg</string>
    <string name="achievement_overachiever">CgkIpNK01csfEAIQCw</string>
    <string name="achievement_runner">CgkIpNK01csfEAIQAg</string>
    <string name="achievement_super_week">CgkIpNK01csfEAIQEA</string>
    <string name="achievement_welcome_to_fithub">CgkIpNK01csfEAIQCg</string>
    <string name="action_settings">Settings</string>
    <string name="annual_rate_placeholder">$ 1783,79</string>
    <string name="app_id">1085463669028</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="app_name">FitHub</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="beer">beer</string>
    <string name="billing_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAuVzW2EaxGvwBzvqlwcRzfjWGBrFPJ4LewqigdtkP676jgtztBB5JoSqpq0FKDFcv2qNL30Lob0cUtvPpVXUdqZfqllbRYRc9D872FENzdZp4gtAXkh4KsWLbtIFJ+zpo5H+ZlyCTuQAqb+cIUdzG3fZyJtTZL3idKIpjrOpy4woOCnpBEMomEjTCdMZ2Kw22EiUO8TuGaI5CHECCNRnw/KPGbIl36Bq2xd5zdPypGuUX/+seqMW9nIseStKebFlb83PitERSJX7lK/KqJHiyDsMPdmioi0xMqrEIdBKp0PP0vBDYV8SUE671c/x6mKSF/gh3zbXNpzNo7dyn4iaq2wIDAQAB</string>
    <string name="birthday">Birthday</string>
    <string name="card_empty_cardwithlist_text">No data....</string>
    <string name="card_progressbar_cardwithlist_text">Loading data...</string>
    <string name="challenge_description">Description</string>
    <string name="challenge_details">Challenge Details</string>
    <string name="challenges_information">Challenges Information</string>
    <string name="change_password">Change Password</string>
    <string name="changelog">"1. Added Moves support.
 2. Bug fixes."</string>
    <string name="coffee">coffee</string>
    <string name="college">college</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="common_android_wear_notification_needs_update_text"><g id="app_name">%1$s</g> requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text"><g id="app_name">%1$s</g>" won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text"><g id="app_name">%1$s</g> requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text"><g id="app_name">%1$s</g>" won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by <g id="app_name">%1$s</g></string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text"><g id="app_name">%1$s</g> relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text"><g id="app_name">%1$s</g>" won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text"><g id="app_name">%1$s</g>" won't run without Google Play services, which are currently updating."</string>
    <string name="discount">discount.</string>
    <string name="email">Email</string>
    <string name="end_date_placeholder">End Date: April 2nd, 2015</string>
    <string name="forgot_password">Forgot Username or Password</string>
    <string name="games_enabled">com.notus.fit.play_games_enabled</string>
    <string name="goal_placeholder">Goal: 30,000 Steps</string>
    <string name="initial_rate_label">Initial annual rate:</string>
    <string name="long_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in lectus in orci ultrices tempor. Curabitur consequat, nisl gravida mollis tempus, urna felis interdum ipsum, vitae sollicitudin sapien tellus in neque. Ut at magna faucibus, hendrerit diam eget, tincidunt arcu. Nulla facilisi. Cras fringilla purus eros, quis condimentum ex fermentum vel. Fusce tempor ornare odio, non tincidunt lorem sagittis porttitor. Pellentesque non fringilla justo.</string>
    <string name="money_placeholder">$ 67,36</string>
    <string name="money_saved">Total Money Saved:</string>
    <string name="new_annual_rate_label">New annual rate:</string>
    <string name="new_rate_placeholder">$ 1716,43</string>
    <string name="notifications_enable">notifications_enable</string>
    <string name="password">Password</string>
    <string name="placeholder_start_date">Start date: May 30th, 2015</string>
    <string name="reward">Reward:</string>
    <string name="reward_placeholder">$20,00</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_exc">Sign Up!</string>
    <string name="sign_up_message">"Don't have an account?"</string>
    <string name="steps_goal">steps_goal</string>
    <string name="uuid_number_placeholder">\#: B7DC918-ABC</string>
</resources>