<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@android:color/white"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="4.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8.0dip">

                <LinearLayout
                    android:layout_width="100.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="8.0dip"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/company_logo"
                        android:layout_width="100.0dip"
                        android:layout_height="80.0dip"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_insurance" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/insurance_number"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="8.0dip"
                        android:singleLine="true"
                        android:text="@string/uuid_number_placeholder"
                        android:textColor="@color/grey_800"
                        android:textSize="16.0sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="8.0dip">

                        <TextView
                            android:id="@+id/initial_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/initial_rate_label"
                            android:textColor="@color/grey_800"
                            android:textSize="15.0sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/yearly_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:padding="8.0dip"
                            android:text="@string/annual_rate_placeholder"
                            android:textColor="@color/red_400"
                            android:textSize="15.0sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="8.0dip">

                        <TextView
                            android:id="@+id/money_saved_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/money_saved"
                            android:textColor="@color/grey_800"
                            android:textSize="15.0sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/money_saved"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:padding="8.0dip"
                            android:text="@string/money_placeholder"
                            android:textColor="@color/green_700"
                            android:textSize="15.0sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="8.0dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/new_annual_rate_label"
                            android:textColor="@color/grey_800"
                            android:textSize="15.0sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/new_rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:padding="8.0dip"
                            android:text="@string/new_rate_placeholder"
                            android:textColor="@color/blue_600"
                            android:textSize="15.0sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>